# UICP

./: .agent-policy.yml  .editorconfig  .env.example  .gitignore  .lychee.toml  .trivyignore  AGENTS.MD  AGENT_ARCHITECTURE_PLAN.md  CHANGELOG.md  LICENSE  README.md  _snippet.txt  _tauri_config_schema.json  mcp-test.txt  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  temp_patch.txt  temp_segment.txt  tmp.rs  tmp_ModelFormatting.txt  tmp_cargo_view.txt  tmp_current_checklist.txt  tmp_model_format_temp.md  tmp_show.ps1  todo.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  code-ops.yml  compute-ci.yml  docs-ci.yml  docs-enforce.yml  docs-extract.yml  verify-modules.yml
.windsurf/rules/: web-assembly.md
config/: agents.yaml.template
config/policy/: checks.yaml  tiers.yaml
config/rubrics/: plan_scoring.yaml
docs/: 2025-01-14-error-handling-refactor.md  2025-01-14-wil-size-parameter-fix.md  2025-01-14-workspace-registration-guard.md  2025-01-15-json-production-pilot.md  2025-01-15-json-tool-calling-implementation.md  2025-01-18-v2-near-term-complete.md  2025-01-18-v2-separation-completed.md  2025-10-17-loading-screen-hardening.md  2025-10-17-type-fidelity-boundary.md  ADAPTER_REFACTOR_PLAN.md  ADAPTER_V2_COMPLETE.md  ADAPTER_V2_STATUS.md  AGENT_SETTINGS_REBUILD.md  AUDIT_SUMMARY.md  BACKLOG.md  CONCEPTS.md  DEEP_AUDIT.md  IMPLEMENTATION_LOG.md  INDEX.md  KNOWN_ISSUES.md  MODEL_CHOICES.md  MODEL_INTEGRATION.md  MOTION_ANIMATIONS.md  MVP checklist.md  Model Formatting Req.md  PROPOSALS.md  README.md  STATUS.md  TEST_PLAN_LEAN.md  USER_GUIDE.md  V1 Acceptance.md  WIL_REFACTOR.md  adapter.md  architecture.md  backend-commands.md  config.md  doc-change-log.md  error-appendix.md  errors.md  findings-matrix.md  (+19 more)
docs/agents/: README.md
docs/architecture/: TASKSPEC_ENHANCEMENT_SUMMARY.md  planner_taskspec_v2.md  (+4 more)
scripts/: uicp-mod-publish.mjs  validate-agents.mjs  verify-pipeline.js
uicp/: .env.example  .gitignore  README.md  eslint.config.js  index.html  lint-results.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
uicp/components/applet.quickjs/: Cargo.toml
uicp/components/applet.quickjs/src/: bindings.rs  lib.rs
uicp/components/applet.quickjs/wit/: world.wit
uicp/components/csv.parse/: Cargo.toml
uicp/components/csv.parse/csv-parse/: Cargo.toml
uicp/components/csv.parse/csv-parse/src/: bindings.rs  lib.rs
uicp/components/csv.parse/csv-parse/wit/: world.wit
uicp/components/csv.parse/src/: bindings.rs  lib.rs
uicp/components/csv.parse/wit/: world.wit
uicp/components/csv.parse/wit/host/: world.wit
uicp/components/log.test/: Cargo.toml
uicp/components/log.test/src/: bindings.rs  lib.rs
uicp/components/log.test/wit/: world.wit
uicp/components/script.hello/: Cargo.toml
uicp/components/script.hello/src/: lib.rs
uicp/components/script.hello/wit/: world.wit
uicp/components/table.query/: Cargo.toml
uicp/components/table.query/src/: bindings.rs  lib.rs
uicp/components/table.query/wit/: world.wit
uicp/components/table.query/wit/host/: world.wit
uicp/src-tauri/: Cargo.toml  build.rs  manifest.txt  tauri.conf.json  windows.manifest  windows.rc
uicp/src-tauri/capabilities/: default.json  events.json  fs-appdata-read.json  fs-appdata-write.json  fs.json  schema.json
uicp/src-tauri/modules/: csv.parse@1.2.0.wasm  manifest.json  table.query@0.1.0.wasm
uicp/src-tauri/src/: action_log.rs  anthropic.rs  apppack.rs  authz.rs  chaos.rs  circuit.rs  circuit_tests.rs  code_provider.rs  codegen.rs  commands.rs  commands_harness.rs  component_bindings.rs  compute.rs  compute_cache.rs  compute_input.rs  core.rs  egress.rs  events.rs  harness.rs  hostctx.rs  initialization.rs  keystore.rs  lib.rs  main.rs  net.rs  policy.rs  provider_circuit.rs  provider_cli.rs  providers.rs  registry.rs  resilience.rs  resilience_tests.rs  wasi_logging.rs
uicp/src-tauri/src-tauri/modules/: csv.parse@1.2.0.wasm
uicp/src-tauri/src/codegen/: apppack.rs  circuit.rs  circuit_tests.rs  codegen.rs  mod.rs
uicp/src-tauri/src/commands/: agents.rs  api_keys.rs  apppack.rs  chat.rs  compute.rs  debug.rs  files.rs  keystore.rs  mod.rs  modules.rs  network.rs  persistence.rs  providers.rs  recovery.rs
uicp/src-tauri/src/compute/: component_bindings.rs  compute.rs  compute_cache.rs  compute_input.rs  hostctx.rs  mod.rs  registry.rs
uicp/src-tauri/src/config/: errors.rs  limits.rs  mod.rs  openai_shape.rs  paths.rs  resilience.rs  timeouts.rs
uicp/src-tauri/src/infrastructure/: action_log.rs  chaos.rs  core.rs  mod.rs  net.rs  resilience.rs  resilience_tests.rs
uicp/src-tauri/src/llm/: anthropic.rs  code_provider.rs  mod.rs  provider_circuit.rs  provider_cli.rs  providers.rs
uicp/src-tauri/src/llm/provider_adapters/: anthropic.rs  contract_tests.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
uicp/src-tauri/src/provider_adapters/: anthropic.rs  contract_tests.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
uicp/src-tauri/src/security/: authz.rs  egress.rs  keystore.rs  mod.rs  policy.rs
uicp/src-tauri/src/services/: chat_service.rs  mod.rs
uicp/src-tauri/src/test_support/: harness.rs  mod.rs  streaming_fixtures.rs
uicp/src-tauri/tests/: integration_compute.rs  integration_persistence.rs  resilience_tests.rs
uicp/src-tauri/tests/integration_compute/: codegen_e2e.rs  command_shims.rs  concurrency_cap.rs  determinism.rs  import_surface.rs  kill_replay_shakedown.rs  mod.rs  module_smoke.rs  negative_execution.rs  policy_enforcement.rs  quickjs_applet.rs  script_world.rs  smoke_test.rs
uicp/src-tauri/tests/integration_persistence/: command_persistence.rs  concurrency_visibility.rs  persist_apply_roundtrip.rs  replay_with_missing_results.rs  schema_integrity.rs  schema_migration_guard.rs  shakedown.rs  sqlite_fault_injection.rs  workspace_persistence.rs
uicp/src-tauri/wit/: command.wit  csv.parse.host.wit  script.world.wit  table.query.host.wit
(+417 files in other folders)
