[package]
name = "uicp"
version = "0.1.0"
description = "UICP Local-First Desktop App"
authors = ["UICP Team"]
edition = "2021"
default-run = "uicp"

[dependencies]
anyhow = "1.0"
ammonia = "4.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "5.0"
dotenvy = "0.15"
keyring = "2.3"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
bytes = "1.7"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-fs = "2.4"
thiserror = "1.0"
time = "0.3"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
ciborium = "0.2"

# Optional Wasm runtime (Preview 2) for compute plane
# Enabled via `--features wasm_compute`; off by default to avoid toolchain churn.
wasmtime = { version = "22", default-features = false, features = ["cranelift", "component-model"], optional = true }
wasmtime-wasi = { version = "22", features = ["component-model"], optional = true }

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dev-dependencies]
tempfile = "3.10"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true

[features]
default = ["wasm_compute"]
# Enable Wasm-only compute host runtime (Wasmtime + WASI Preview 2)
wasm_compute = ["dep:wasmtime", "dep:wasmtime-wasi"]
