[package]
name = "uicp"
version = "0.1.0"
description = "UICP Local-First Desktop App"
authors = ["UICP Team"]
edition = "2021"
default-run = "uicp"

[dependencies]
anyhow = "1.0"
ammonia = "4.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "5.0"
dotenvy = "0.15"
keyring = "2.3"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
semver = "1.0"
bytes = "1.7"
tauri = { version = "2.4.1", features = [] }
tauri-plugin-fs = "2.4"
time = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
ciborium = "0.2"
ed25519-dalek = "2.1"
tokio = { version = "1", features = ["full"] }

  # Optional Wasm runtime (WASI Preview 2) for the compute plane.
  # Default-enabled in this repo via the "wasm_compute" feature to exercise compute paths.
  # Opt out at build time with `--no-default-features` (disables "wasm_compute").
  wasmtime = { version = "22", default-features = false, features = ["cranelift", "component-model"], optional = true }
  wasmtime-wasi = { version = "22", optional = true }

  [build-dependencies]
  tauri-build = { version = "2.4.1", features = [] }

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true

[features]
default = []
wasm_compute = ["dep:wasmtime", "dep:wasmtime-wasi"]
uicp_wasi_enable = []
uicp_bindgen = []
