[package]
name = "uicp"
version = "0.1.0"
description = "UICP Local-First Desktop App"
authors = ["UICP Team"]
edition = "2021"
default-run = "uicp"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
ammonia = "4.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "5.0"
dotenvy = "0.15"
keyring = "2.3"
once_cell = "1.19"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "gzip", "brotli", "deflate"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
tokio-rusqlite = { version = "0.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
 base64 = "0.22"
 blake3 = "1.5"
 semver = "1.0"
 bytes = "1.7"
tauri = { version = "2.4.1", features = [] }
tempfile = { version = "3.10", optional = true }
tauri-plugin-fs = "2.4"
tauri-plugin-dialog = { version = "2.4", optional = true }
time = "0.3"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
ciborium = "0.2"
 ed25519-dalek = "2.1"
 tokio = { version = "1", features = ["full"] }
 rand = { version = "0.8", features = ["std"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"], optional = true }
pollster = "0.3"

  # Optional Wasm runtime (WASI Preview 2) for the compute plane.
  # Enable via `--features "wasm_compute uicp_wasi_enable"` when you want local compute.
  # WHY: Newer Wasm component encoding (0x0d) requires an updated Wasmtime runtime.
  # SAFETY: Keep feature set minimal; we rely on component model + cranelift JIT + cache.
  wasmtime = { version = "37.0.2", default-features = false, features = ["cranelift", "component-model", "cache"], optional = true }
  wasmtime-wasi = { version = "37.0.2", optional = true }
  dashmap = "6.0"

[build-dependencies]
embed-resource = "2.5"
tauri-build = { version = "2.4.1", features = [] }

[dev-dependencies]
tauri = { version = "2.4.1", features = ["test"] }
tempfile = "3.10"

[[bin]]
name = "harness"
path = "src/bin/harness.rs"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
panic = "abort"
lto = true
strip = true

[features]
default = ["tauri2", "dialog_plugin"]
tauri2 = []
dialog_plugin = ["dep:tauri-plugin-dialog"]
wasm_compute = ["dep:wasmtime", "dep:wasmtime-wasi", "dep:tempfile"]
uicp_wasi_enable = []
uicp_bindgen = []
compute_harness = ["dep:tempfile", "tauri/test"]
otel_spans = ["dep:tracing", "dep:tracing-subscriber"]

[[bin]]
name = "compute_harness"
path = "src/bin/compute_harness.rs"
required-features = ["compute_harness"]

[[bin]]
name = "uicp-log"
path = "src/bin/uicp_log.rs"
