[package]
name = "applet-quickjs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
boa_engine = { version = "0.17.0", default-features = false, features = ["annex-b"] }
once_cell = "1.19.0"
serde_json = "1.0.132"
wit-bindgen = "0.44.0"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[package.metadata.component]
package = "uicp:applet-script"

[package.metadata.component.target]
path = "wit"
world = "task"
