[package]
name = "uicp-task-csv-parse"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
wit-bindgen = { version = "0.46", default-features = false, features = ["macros"] }
base64 = "0.22"
ciborium = "0.2"

[package.metadata.component]
package = "uicp:task_csv_parse@1.2.0"
[package.metadata.component.dependencies]
"uicp:host@1.0.0" = { path = "../../../docs/wit/uicp-host@1.0.0.wit" }

[package.metadata.component.target]
path = "../../../docs/wit/tasks/uicp-task-csv-parse@1.2.0.wit"
world = "entry"

