[package]
name = "uicp-task-csv-parse"
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
csv = "1.3"
wit-bindgen = { version = "0.46", default-features = false, features = ["macros"] }
base64 = "0.22"
ciborium = "0.2"
wit-bindgen-rt = "0.23"

[package.metadata.component]
package = "uicp:task-csv-parse"
[package.metadata.component.target]
path = "wit"
world = "entry"

[package.metadata.component.target.dependencies]
"uicp:host"   = { path = "../../../docs/wit/host" }
"wasi:io"     = { path = "../../../docs/wit/vendor/wasi-io" }
"wasi:clocks" = { path = "../../../docs/wit/vendor/wasi-clocks" }
"wasi:logging"= { path = "../../../docs/wit/vendor/wasi-logging" }

