[package]
name = "uicp-task-table-query"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { version = "0.46", default-features = false, features = ["macros"] }
ciborium = "0.2"
wit-bindgen-rt = "0.23"

[package.metadata.component]
package = "uicp:task-table-query"
[package.metadata.component.target]
path = "wit"
world = "entry"

[package.metadata.component.target.dependencies]
"uicp:host"   = { path = "../../../docs/wit/host" }
"wasi:io"     = { path = "../../../docs/wit/vendor/wasi-io" }
"wasi:clocks" = { path = "../../../docs/wit/vendor/wasi-clocks" }
"wasi:logging"= { path = "../../../docs/wit/vendor/wasi-logging" }

