[package]
name = "table-query"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
ciborium = "0.2"
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[package.metadata.component]
package = "uicp:task-table-query@0.1.0"
[package.metadata.component.target]
path = "wit"
world = "task"

[package.metadata.component.target.dependencies]
"uicp:host"   = { path = "../../../docs/wit/host" }
"wasi:io"     = { path = "../../../docs/wit/vendor/wasi-io" }
"wasi:clocks" = { path = "../../../docs/wit/vendor/wasi-clocks" }
"wasi:logging"= { path = "../../../docs/wit/vendor/wasi-logging" }

